Closed Bug 1381311 Opened 8 years ago Closed 8 years ago

Intermittent Assertion failure: NS_IsMainThread(), at c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/netwerk/protocol/http/HttpBackgroundChannelChild.cpp:455

Categories

(Core :: Networking: HTTP, defect)

42 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox-esr52 --- unaffected
firefox54 --- unaffected
firefox55 --- unaffected
firefox56 --- fixed

People

(Reporter: aryx, Assigned: schien)

References

Details

(Keywords: assertion, crash, intermittent-failure, Whiteboard: [necko-active][PBg-HTTP-M3])

Attachments

(1 file)

https://treeherder.mozilla.org/logviewer.html#?job_id=114617082&repo=mozilla-central 10:49:42 INFO - TEST-START | dom/xul/test/test_bug311681.xul 10:49:42 INFO - GECKO(1832) | ++DOMWINDOW == 57 (18F0A800) [pid = 1832] [serial = 65] [outer = 2A819400] 10:49:42 INFO - GECKO(1832) | MEMORY STAT | vsize 843MB | vsizeMaxContiguous 734MB | residentFast 247MB | heapAllocated 84MB 10:49:42 INFO - GECKO(1832) | Unable to read VR Path Registry from C:\Users\cltbld.T-W732-IX-147.000\AppData\Local\openvr\openvrpaths.vrpath 10:49:42 INFO - GECKO(1832) | [Child 2672] WARNING: site security information will not be persisted: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/security/manager/ssl/nsSiteSecurityService.cpp, line 552 10:49:42 INFO - GECKO(1832) | Unable to read VR Path Registry from C:\Users\cltbld.T-W732-IX-147.000\AppData\Local\openvr\openvrpaths.vrpath 10:49:42 INFO - GECKO(1832) | [Child 4056] WARNING: site security information will not be persisted: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/security/manager/ssl/nsSiteSecurityService.cpp, line 552 10:49:42 INFO - TEST-OK | dom/xul/test/test_bug311681.xul | took 128ms 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | ++DOMWINDOW == 58 (19FAE400) [pid = 1832] [serial = 66] [outer = 2A819400] 10:49:42 INFO - GECKO(1832) | [Child 2672] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Child 2672] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Child 4056] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Child 4056] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | Assertion failure: NS_IsMainThread(), at c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/netwerk/protocol/http/HttpBackgroundChannelChild.cpp:455 10:49:42 INFO - GECKO(1832) | [Child 4056] WARNING: NS_ENSURE_TRUE(maybeContext) failed: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/xpcom/threads/nsThread.cpp, line 1040 10:49:42 INFO - GECKO(1832) | Assertion failure: NS_IsMainThread(), at c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/netwerk/protocol/http/HttpBackgroundChannelChild.cpp:455 10:49:42 INFO - GECKO(1832) | [Child 2672] WARNING: NS_ENSURE_TRUE(maybeContext) failed: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/xpcom/threads/nsThread.cpp, line 1040 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - GECKO(1832) | [Parent 1832] WARNING: pipe error: 109: file c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 10:49:42 INFO - TEST-START | dom/xul/test/test_bug335375.xul 10:49:42 INFO - GECKO(1832) | #01: mozilla::net::HttpBackgroundChannelChild::OnStartRequestReceived() [netwerk/protocol/http/HttpBackgroundChannelChild.cpp:141] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #02: mozilla::detail::RunnableMethodImpl<RefPtr<mozilla::net::HttpBackgroundChannelChild>,void ( mozilla::net::HttpBackgroundChannelChild::*)(void),1,0>::Run() [obj-firefox/dist/include/nsThreadUtils.h:1190] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #03: nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:1438] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #04: NS_ProcessNextEvent(nsIThread *,bool) [xpcom/threads/nsThreadUtils.cpp:489] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #05: mozilla::net::nsSocketTransportService::Run() [netwerk/base/nsSocketTransportService2.cpp:979] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #06: nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:1438] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #07: NS_ProcessNextEvent(nsIThread *,bool) [xpcom/threads/nsThreadUtils.cpp:489] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #08: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate *) [ipc/glue/MessagePump.cpp:369] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #09: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:320] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #10: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:314] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #11: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:294] 10:49:42 INFO - 10:49:42 INFO - GECKO(1832) | #12: nsThread::ThreadFunc(void *) [xpcom/threads/nsThread.cpp:508] 10:49:42 INFO - 10:49:43 INFO - GECKO(1832) | #13: _PR_NativeRunThread [nsprpub/pr/src/threads/combined/pruthr.c:397] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #14: pr_root [nsprpub/pr/src/md/windows/w95thred.c:95] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #15: ucrtbase.DLL + 0x3d5ef 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #16: kernel32.dll + 0x53c45 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #17: patched_BaseThreadInitThunk [mozglue/build/WindowsDllBlocklist.cpp:815] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #18: ntdll.dll + 0x637f5 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #19: ntdll.dll + 0x637c8 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | ++DOMWINDOW == 59 (198D7800) [pid = 1832] [serial = 67] [outer = 2A819400] 10:49:43 INFO - GECKO(1832) | #01: mozilla::net::HttpBackgroundChannelChild::OnStartRequestReceived() [netwerk/protocol/http/HttpBackgroundChannelChild.cpp:141] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #02: mozilla::detail::RunnableMethodImpl<RefPtr<mozilla::net::HttpBackgroundChannelChild>,void ( mozilla::net::HttpBackgroundChannelChild::*)(void),1,0>::Run() [obj-firefox/dist/include/nsThreadUtils.h:1190] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #03: nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:1438] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #04: NS_ProcessNextEvent(nsIThread *,bool) [xpcom/threads/nsThreadUtils.cpp:489] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #05: mozilla::net::nsSocketTransportService::Run() [netwerk/base/nsSocketTransportService2.cpp:979] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #06: nsThread::ProcessNextEvent(bool,bool *) [xpcom/threads/nsThread.cpp:1438] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #07: NS_ProcessNextEvent(nsIThread *,bool) [xpcom/threads/nsThreadUtils.cpp:489] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #08: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate *) [ipc/glue/MessagePump.cpp:369] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #09: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:320] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #10: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:314] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #11: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:294] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #12: nsThread::ThreadFunc(void *) [xpcom/threads/nsThread.cpp:508] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #13: _PR_NativeRunThread [nsprpub/pr/src/threads/combined/pruthr.c:397] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #14: pr_root [nsprpub/pr/src/md/windows/w95thred.c:95] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #15: ucrtbase.DLL + 0x3d5ef 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #16: kernel32.dll + 0x53c45 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #17: patched_BaseThreadInitThunk [mozglue/build/WindowsDllBlocklist.cpp:815] 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #18: ntdll.dll + 0x637f5 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | #19: ntdll.dll + 0x637c8 10:49:43 INFO - 10:49:43 INFO - GECKO(1832) | MEMORY STAT | vsize 842MB | vsizeMaxContiguous 734MB | residentFast 245MB | heapAllocated 82MB 10:49:43 INFO - Buffered messages logged at 10:49:43 10:49:43 INFO - TEST-PASS | dom/xul/test/test_bug335375.xul | checking command has an accesskey 10:49:43 INFO - TEST-PASS | dom/xul/test/test_bug335375.xul | checking command and button have the same accesskey 10:49:43 INFO - TEST-PASS | dom/xul/test/test_bug335375.xul | checking button has inherited new accesskey from command 10:49:43 INFO - Buffered messages finished 10:49:43 INFO - TEST-UNEXPECTED-ERROR | dom/xul/test/test_bug335375.xul | unexpected-crash-dump-found - This test left crash dumps behind, but we weren't expecting it to! 10:49:43 INFO - Found unexpected crash dump file C:\Users\cltbld.T-W732-IX-147.000\AppData\Local\Temp\tmpxdm73l.mozrunner\minidumps\283aa0fe-8296-4c7a-8abd-cf43bc5822a4.dmp. 10:49:43 INFO - TEST-UNEXPECTED-CRASH | dom/xul/test/test_bug335375.xul | Finished in 168ms
In Bug 1338493 I moved the operation thread of HttpBackgroundChannelChild from main thread to STS thread, however I miss this one assertion. https://searchfox.org/mozilla-central/rev/01d27fdd3946f7210da91b18fcccca01d7324fe2/netwerk/protocol/http/HttpBackgroundChannelChild.cpp#455
Assignee: nobody → schien
Blocks: 1338493
Whiteboard: [necko-active][PBg-HTTP-M3]
Comment on attachment 8886906 [details] Bug 1381311 - change main thread check to STS thread check. https://reviewboard.mozilla.org/r/157632/#review163008
Attachment #8886906 - Flags: review?(honzab.moz) → review+
Pushed by schien@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7f71a2cc1151 change main thread check to STS thread check. r=mayhemer
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: