Bug 1381311 - change main thread check to STS thread check. r=mayhemer

In Bug 1338493 I moved the operation thread of HttpBackgroundChannelChild from main thread to STS thread.
All the thread assertion shoudl be updated.

MozReview-Commit-ID: 307jBR48aYc