netwerk/protocol/http/HttpBackgroundChannelChild.cpp
@@ -452,7 +452,7 @@ HttpBackgroundChannelChild::ActorDestroy(ActorDestroyReason aWhy)
     RefPtr<HttpBackgroundChannelChild> self = this;
     mQueuedRunnables.AppendElement(NS_NewRunnableFunction(
       "HttpBackgroundChannelChild::ActorDestroy", [self]() {
-        MOZ_ASSERT(NS_IsMainThread());
+        MOZ_ASSERT(OnSocketThread());
         RefPtr<HttpChannelChild> channelChild = self->mChannelChild.forget();
 
         if (channelChild) {
